--- a/PG2/S7_Fuente/S7_Informe.Rmd
+++ b/PG2/S7_Fuente/S7_Informe.Rmd
@@ -129,7 +129,7 @@ Luego de la limpieza, decidimos mantenernos con `12` variables que se relacionan
 ### Encuestas de Stakoverflow
 
 | Nombre de la variable | Tipo de variable   | Descripción                                               | Restricciones                                        |
-|------------------|------------------|-------------------|------------------|
+|-----------------------|--------------------|-----------------------------------------------------------|------------------------------------------------------|
 | Age                   | Categórica Ordinal | Edad                                                      | \-                                                   |
 | Gender                | Categórica Ordinal | Género                                                    | Man y Woman                                          |
 | Salary                | Numérica Contínua  | El salario anual en dólares del desarrollador             | [3600 - 249153]                                      |
@@ -140,7 +140,7 @@ Luego de la limpieza, decidimos mantenernos con `12` variables que se relacionan
 ### PLDB Lenguajes de Programación
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                       | Restricciones                                                               |
-|------------------|------------------|------------------|-------------------|
+|-----------------------|--------------------|-------------------------------------------------------------------|-----------------------------------------------------------------------------|
 | Nombre                | Categórica Nominal | Nombre original del lenguaje de programación                      | Deben estar los mismos lenguajes de la encuesta de StackOverflow            |
 | Type                  | Categórica Ordinal | El tipo de lenguaje del que se trata                              | Debe ser "*pl*", "*queryLanguage*", "*textMarkup*" y "*stylesheetLanguage*" |
 | N_Trabajos            | Numérica Discreta  | Número de trabajos relacionados al lenguaje de programación       | Debe ser mayor a 0                                                          |
@@ -363,7 +363,6 @@ barplot(table(encuesta$ModifiedAge),
      ylab = "Frecuencia",
      col="pink")
 ```
-
 
 ### ¿Existe una relación entre el lenguaje de programación utilizado por un desarrollador y su salud mental?
 
@@ -1157,11 +1156,9 @@ $$
 \mathbb{X} = \text{Número de lenguajes mensuales que usa un desarrollador en un mes} \\
 Rango(\mathbb{X}) = \mathbb{N} - \{0\} \\
 \mathbb{X} \sim \mathcal{Poisson}(\lambda) = \mathcal{Poisson}(5)
-$$ 
+$$
 
-Ya que cumple con las siguientes condiciones: \\
-+ Los eventos deben ser independientes entre sí.\\
-+ La tasa media de eventos debe ser constante en cualquier intervalo de tiempo.
+Ya que cumple con las siguientes condiciones: \\ + Los eventos deben ser independientes entre sí.\\ + La tasa media de eventos debe ser constante en cualquier intervalo de tiempo.
 
 Entonces:
 
@@ -1171,7 +1168,7 @@ $$
   \frac{\mathrm{e^{-5}5^x}}{x!}, & \forall~x > 0; \\
   0, & \text{en caso contrario}
 \end{cases}
-$$ 
+$$
 
 Consideramos que la distribución de `Poisson` tome valores a partir de 1, ya que en la variable `Total de Lenguajes` no existe desarrollador que utilice 0 lenguajes.
 
@@ -1261,19 +1258,16 @@ p
 n <- 1000
 ```
 
-$$
-\mathbb{Y} = \text{Número de desarrolladores que programen en JavaScript} \\ \text{y ganan mas que el promedio en una muestra de 1000 programadores} \\
+\$\$ \mathbb{Y} = \text{Número de desarrolladores que programen en JavaScript} \\ \text{y ganan mas que el promedio en una muestra de 1000 programadores} \\
 
 Rango(\mathbb{Y}) = [1000] \\
 
-\mathbb{Y} \sim \mathcal{Bin}(n,p) = \mathcal{Bin}(1000,0.27)
-$$
-Entonces:
+\mathbb{Y} \sim \mathcal{Bin}(n,p) = \mathcal{Bin}(1000,0.27) \$\$ Entonces:
 
 $$
 \mathbb{P}(\mathbb{Y} = x) = \mathcal{Bin}(1000, 0.27) = 
 \binom{1000}{x} \cdot 0.27^x \cdot (1-0.27)^{1000-x}
-$$ 
+$$
 
 Modelamos la variable `Usa JavaScript y gana más que el promedio` y la distribución Binomial:
 
@@ -1350,6 +1344,7 @@ Ey
 Se aprecia que el promedio de los datos se aproxima a la esperanza de la variable aleatoria. No obstante, sigue habiendo irregularidades.
 
 #### Varianza
+
 $$
 Var(\mathbb{X}) = n \cdot p \cdot (1 - p)
 $$
@@ -1375,7 +1370,7 @@ $$
 \mathbb{Z} = \text{ Salario que gana un desarrollador } \\
 Rango(\mathbb{Z}) = [30000, 70000] \\
 \mathbb{Z} \sim \mathcal{Unif}(a,b) = \mathcal{Unif}(30000,70000)
-$$ 
+$$
 
 Escogimos el rango de 30 - 70 mil puesto que gran parte de nuestras observaciones se encuentran en ese rango:
 
@@ -1394,7 +1389,7 @@ Entonces:
 
 $$
 \mathbb{P}(\mathbb{Z} \leq x) = \frac{x - 30000}{70000 - 30000} = \frac{x - 30000}{40000}
-$$ 
+$$
 
 Modelamos la variable `Salary` acotada condicionalmente y la distribución Uniforme:
 
@@ -1418,9 +1413,11 @@ lines(Xs, dunif(Xs,30000,70000), col = "red", lwd = 2)
 Como se puede apreciar, la variable `Salary` se aproxima significativamente a una distribución Uniforme. Veamos las medidas de la variable aleatoria.
 
 #### Esperanza
+
 $$
 E(\mathbb{Z}) = \frac{b + a}{2}
 $$
+
 ```{r}
 Ez <- (70000 + 30000) / 2
 Ez
@@ -1435,6 +1432,7 @@ Como se puede apreciar, la media de la variable `Salary` se aproxima mucho a la 
 $$
 Var(\mathbb{Z}) = \frac{(b - a)^2}{12}
 $$
+
 ```{r}
 varz <- (70000 - 30000)^2/12
 varz
@@ -1453,7 +1451,6 @@ sd(pruebaSalary$Salary)
 Se aprecia que los datos varian similarmente tanto para la varable `Salary` como para la variable aleatoria.
 
 Por lo tanto, a pesar de no ajustarse perfectamente a la distribución, consideramos que se aproxima en gran medida a comparación del resto de nuestras variables. Esto sugiere, que la probabilidad de que un junior developer gane menos de 60 mil dólares anuales es `3/4`
-
 
 ### Conclusiones
 
